@@ -225,6 +225,7 @@ PNG/PNG.xs
 PNG/README
 PNG/t/00load.t
 PNG/t/10png.t			Test png support
+PNG/testimg/badcrc.png
 PNG/testimg/palette.png
 PNG/testimg/palette_out.png
 pnm.c
