@@ -1,5 +1,8 @@
 Imager release history.  Older releases can be found in Changes.old
 
+ - PNG rework
+   - improve error reporting
+
 Imager 0.90 - unreleased
 ===========
 
